--- a/src/app/componentes/form-notificacion/form-notificacion.component.html
+++ b/src/app/componentes/form-notificacion/form-notificacion.component.html
@@ -1,38 +1,63 @@
 
 <h3 class="titulo-form-noti">Notificación</h3>
 
-<form (ngSubmit)=" enviar() ">
+<form [formGroup]="form" >
 
-  <div class="form-group">
-    <label for="titulo"> Titulo </label>
-    <input [(ngModel)]="notificacion.titulo" name="titulo" id="titulo" class="form-control" type="text" placeholder="Titulo" required>
-  </div>
+  <div formGroupName="notificacion">
+    <div class="form-group">
+      <label for="titulo" > Titulo </label>
+      <input  formControlName="titulo" maxlength="50"  id="titulo" class="form-control" type="text" placeholder="Titulo" 
+              [ngClass]="{ 'is-invalid' : form.controls['notificacion'].controls['titulo']?.touched && form.controls['notificacion'].controls['titulo']?.invalid }" >
+      
+      <div class="invalid-feedback"><!-- Aparece automaticamente cuando el input tiene la clase is-invalid -->
+        Escriba un titulo 
+      </div>
+    </div>
 
-  <div class="form-group">
-    <label for="descripcion"> Descripción</label>
-    <textarea [(ngModel)]="notificacion.descripcion" name="descripcion" class="form-control" rows="3" id="descripcion" required></textarea>
-  </div>
+    <div class="form-group">
+      <label for="descripcion"> Descripción</label>
+      <textarea formControlName="descripcion" class="form-control" rows="3" id="descripcion" 
+                [ngClass]=" { 'is-invalid': form.controls['notificacion']?.controls['descripcion'].touched && form.controls['notificacion'].controls['descripcion']?.invalid } "></textarea>
 
-  <div class="form-group">
-    <label for="tipo"> Tipo </label>
-    <select [(ngModel)]="notificacion.tipo" name="tipo" id="tipo" class="form-control">
-      <option value="1"> Noticia </option>
-      <option value="2"> Advertencia </option>
-      <option value="3"> Peligro </option>
-    </select>
-  </div>
+      <div class="invalid-feedback">
+        Escriba una descripción
+      </div>
+    </div>
+    
 
-  <div class="form-group">
-    <label for="para"> Enviar a </label>
-    <select [(ngModel)]="para" name="para" id="para" class="form-control">
-      <option value="PROFESORES">Profesores</option>
-      <option value="ESTUDIANTES">Estudiantes</option>
-      <option value="DIRECTIVOS">Directivos</option>
-    </select>
+    <div class="form-group">
+      <label for="tipo"> Tipo </label>
+      <select formControlName="tipo" id="tipo" class="form-control"
+              [ngClass]=" { 'is-invalid': form.controls['notificacion']?.controls['tipo'].touched && form.controls['notificacion'].controls['tipo']?.invalid } ">
+        <option value="">Seleccionar</option>
+        <option value="1"> Noticia </option>
+        <option value="2"> Advertencia </option>
+        <option value="3"> Peligro </option>
+      </select>
+
+      <div class="invalid-feedback"> Elija el tipo de notificación </div>
+    </div>
+ 
+
+    <div class="form-group">
+      <label for="para"> Enviar a </label>
+      <select formControlName="destinatario" id="para" class="form-control"
+              [ngClass]=" { 'is-invalid': form.controls['notificacion'].controls['destinatario'].touched && form.controls['notificacion'].controls['destinatario']?.invalid } ">
+        <option value="">Seleccionar</option>
+        <option value="PROFESORES">Profesores</option>
+        <option value="ESTUDIANTES">Estudiantes</option>
+        <option value="DIRECTIVOS">Directivos</option>
+      </select>
+
+      <div class="invalid-feedback"> Elija los destinatarios </div>
+    </div>
   </div>
 
   <div class="boton-enviar">
-    <button type="submit" class="btn btn-primary"> Enviar </button>
+    <button (click)="enviar()" class="btn btn-block btn-primary"
+          [disabled]=" form.invalid ">
+      Enviar 
+    </button>
   </div>
 
 </form>
