--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,4 +1,5 @@
-
 <div class="row">
-  <app-form-notificacion class="col-md-4"></app-form-notificacion>
+    <mat-card class="col-md-4">
+        <app-form-notificacion></app-form-notificacion>
+    </mat-card>
 </div>
