--- a/src/app/componentes/form-notificacion/form-notificacion.component.css
+++ b/src/app/componentes/form-notificacion/form-notificacion.component.css
@@ -25,3 +25,16 @@
     padding: 2px;
     font-size: 17px;
 }
+
+.cargando {
+    height: 20px;
+    width: 20px;
+}
+
+.cargando {
+    margin: auto;
+}
+
+.cont-cargando {
+    margin-top: 30px;
+}
