--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,5 +1,11 @@
 <div class="row">
-    <mat-card class="col-md-4">
-        <app-form-notificacion></app-form-notificacion>
-    </mat-card>
+    <div class="col-md-4">
+        <mat-card class="card-form">
+            <app-form-notificacion></app-form-notificacion>
+        </mat-card>
+    </div>
+
+    <div class="col-md-8">
+        <app-lista-notificaciones></app-lista-notificaciones>
+    </div>
 </div>
