Agrego Inputs y Outputs para comunicar componentes
El componente del formulario emite un evento output que indica cuando se
envio una notificacion.
El componente de lista de notifiaciones recive un parametro por input el
cual es un array de notificaciones para mostrar.

--- a/src/app/componentes/form-notificacion/form-notificacion.component.html
+++ b/src/app/componentes/form-notificacion/form-notificacion.component.html
@@ -1,7 +1,7 @@
 <h4 class="titulo-form-noti">
     Notificación</h4>
 
-<form [formGroup]="form" class="form-bloque">
+<form [formGroup]="form" class="form-bloque animated fadeIn fast">
 
     <div formGroupName="notificacion">
 
