--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-md-4">
         <mat-card class="card-form">
-            <app-form-notificacion></app-form-notificacion>
+            <app-form-notificacion (notiEnviada)="agregarNoti($event)"></app-form-notificacion>
         </mat-card>
     </div>
 
     <div class="col-md-8">
-        <app-lista-notificaciones></app-lista-notificaciones>
+        <app-lista-notificaciones [notificaciones]="notificaciones"></app-lista-notificaciones>
     </div>
 </div>
