Agrego aviso de que no hay notificaciones
Ademas, corrigio la doble referencia en el array de notificaciones
cuando se envian varias sin cambiar los campos del formulario. Lo que
pasaba era que se guardaba una doble referencia de la misma
notificacion.

--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -6,8 +6,18 @@
     </div>
 
     <div class="col-md-8">
-        <app-lista-notificaciones   [notificaciones]=" notificaciones "
-                                    (reenviarNoti)=" reenviarNoti($event) " 
-                                    (borrarNoti)=" borrarNoti($event) "></app-lista-notificaciones>
+        <div *ngIf=" notificaciones?.length == 0; else lista " >
+            <div class="cont-no-hay-notis">
+                <img src="assets/imgs/vacio.png" width="100px" alt="No tiene notificaciones" > 
+                <p>No hay notificaciones</p>
+            </div>
+        </div>
+        
+        <ng-template #lista>
+            <app-lista-notificaciones   
+            [notificaciones]=" notificaciones "
+            (reenviarNoti)=" reenviarNoti($event) " 
+            (borrarNoti)=" borrarNoti($event) "></app-lista-notificaciones>
+        </ng-template>
     </div>
 </div>
