--- a/src/app/componentes/home/home.component.css
+++ b/src/app/componentes/home/home.component.css
@@ -1,3 +1,18 @@
 .card-form {
     border-radius: 5px;
 }
+
+.cont-no-hay-notis {
+    box-sizing: border-box;
+    padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cont-no-hay-notis p {
+    margin-top: 10px;
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #6b69697c;
+}
