--- a/src/app/componentes/lista-noticias/lista-noticias.component.html
+++ b/src/app/componentes/lista-noticias/lista-noticias.component.html
@@ -10,7 +10,7 @@
         <div class="cont-card-noticias">
 
           <div class="cont-img-noticias">
-            <img [src]=" 'http://142.93.71.94/NotiServer/src/uploads/noticias/'+ noticia.id +'.jpg' ">
+            <img [src]=" urlNoticias + noticia.id +'.jpg' ">
           </div>
           
           <div class="cont-text-noticia">
@@ -33,7 +33,7 @@
         <div class="cont-card-banner">
 
           <div class="cont-img-banner">
-            <img [src]=" 'http://142.93.71.94/NotiServer/src/uploads/noticias/'+ noticia.id +'.jpg' ">
+            <img [src]=" urlNoticias + noticia.id +'.jpg' ">
           </div>
 
           <div class="cont-text-banner">
